<resources>
    <string name="app_name">Remote Green House</string>
    <string name="action_settings">Settings</string>

    <!-- Headings / Labels -->
    <string name="label_bluetooth">Bluetooth</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_airHumidity">Air Humidity</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_moisture">Moisture</string>
    <string name="label_lightOnTime">on time</string>
    <string name="label_lightOffTime">off time</string>
    <string name="label_lightMinBright">lighting limit</string>
    <string name="label_tabOverview">Overview</string>
    <string name="label_tabLightning">Lighting</string>
    <string name="label_tab_ventilation">Ventilation</string>
    <string name="label_tabWatering">Watering</string>
    <string name="label_timerClock">Timer clock</string>
    <string name="label_lightingSensor">Lighting sensor</string>
    <string name="label_fanState">Fan control state</string>
    <string name="label_airchange">air changes per day:</string>

    <array name="array_label_identifiers">
        <item>@string/label_temperature</item>
        <item>@string/label_airHumidity</item>
        <item>@string/label_pressure</item>
        <item>@string/label_moisture</item>
        <item>@string/label_brightness</item>
    </array>

    <!-- States -->
    <string name="state_on">ON</string>
    <string name="state_off">OFF</string>
    <string name="state_full_load">100%</string>
    <string name="state_partial_load">50%</string>


    <!-- Actions -->
    <string name="action_connect_bluetooth">Enable Bluetooth</string>
    <string name="action_disconnect_bluetooth">Disable Bluetooth</string>

    <!--Buttons-->
    <string name="btn_connect">Connect</string>

    <!--Messages-->
    <string name="msg_bt_connected">Connected</string>
    <string name="msg_bt_disconnected">Not Connected</string>
    <string name="msg_bt_connecting">Connecting &#8230;</string>
    <string name="msg_bt_on">Bluetooth is enabled.</string>
    <string name="msg_bt_off">Bluetooth is disabled.</string>
    <string name="msg_bt_turn_on_bt">Please enable bluetooth to connect to a green house.</string>
    <string name="msg_no_device_found">No green house detected.</string>

    <!--Values-->
    <string name="val_nan">NAN</string>
    <string name="val_initial_time">00:00</string>
    <string name="val_initial_brightness">0</string>

    <!--Physical Dimensions-->
    <string name="dim_pressure">%1$s hPa</string>
    <string name="dim_humidity">%1$s g/m³</string>
    <string name="dim_brightness">%1$s lux</string>
    <string name="dim_temperature">%1$s °C</string>

    <array name="array_dimensions">
        <item>%1$s °C</item>
        <item>%1$s g/m³</item>
        <item>%1$s lux</item>
        <item>%1$s hPa</item>
        <item>%1$s %</item>
    </array>

    <string-array name="array_airCchange">
        <item>x0</item>
        <item>x1</item>
        <item>x2</item>
        <item>x3</item>
        <item>x4</item>
        <item>x5</item>
    </string-array>


</resources>
